--- a/templates/credit_model.html
+++ b/templates/credit_model.html
@@ -11,6 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ url_for('static',filename='CSS/cssfile.css')  }}">
 
   <style>
     body {
