--- a/templates/credit_model.html
+++ b/templates/credit_model.html
@@ -47,6 +47,11 @@
       text-align: center;
       color: white;
     }
+    
+    /* Visit Counter styling */
+    .v_counter{
+    color: white;
+    font-weight: bold;
 
   </style>
 </head>
@@ -150,7 +155,12 @@
       </div>
     </form>
 
-    
+    <!-- hitwebcounter Code START -->
+    <div class="v_counter"> 
+      <h6>Visitor Counter</h6>
+        <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=7798458&style=0005&nbdigits=3&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+    </div>
 
   </div>
 
